<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item
        android:id="@+id/itemSearch"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always|collapseActionView"
        android:queryHint="@string/search_hint"
        android:title="@string/action_search"/>
    
   <!--  <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_action_search"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_search"/> -->
        
    <item
        android:id="@+id/action_create_file"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_actionbar_note"
        android:title="@string/action_create_file"/>
    <item
        android:id="@+id/action_create_folder"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_actionbar_collection"
        android:title="@string/action_create_folder"/>
    
    
    
    <item
        android:id="@+id/action_recent_edit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_recent_edit"/>

</menu>